--- a/css/styles.css
+++ b/css/styles.css
@@ -438,4 +438,29 @@ ol {
  
   .pictures-portfolio:hover .textport {
       transform: translateY(0);}
- 
+
+      .backdrop {
+        position: fixed;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(46, 47, 66, 0.40);
+      }
+      .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1);
+        width: 408px;
+        min-height: 584px;
+        background-color: #FCFCFC;
+        border-radius: 4px;
+        
+
+
+      }
+      .modal-close-btn {
+      }
+      .modal-close-icon {
+      }
