--- a/css/styles.css
+++ b/css/styles.css
@@ -564,11 +564,14 @@ line-height: 24px;
 letter-spacing: 0.32px;
 padding:72px 24px 24px;
 }
+.label-container{
+  padding-left: 24px;
+  padding-right: 24px;
+}
 
 .div-label {
   margin-bottom: 8px;
-  padding-left: 24px;
-  padding-right: 24px;
+ 
 }
 .label {
 font-size: 12px;
