--- a/css/styles.css
+++ b/css/styles.css
@@ -504,7 +504,7 @@ ol {
   opacity: 0;
   visibility: hidden;
   position: none;
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-open{
   opacity: 1;
@@ -522,10 +522,9 @@ ol {
   min-height: 584px;
   background-color: #fcfcfc;
   border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   padding: 72px 24px 24px 24px; 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -566,6 +565,7 @@ ol {
   font-weight: 500;
 line-height: 24px;
 letter-spacing: 0.32px;
+margin-bottom: 16px; 
 
 }
 .label-container{
